Name:           TypedJavaScript
Version:        1.0
Cabal-Version:	>= 1.2.3
Copyright:      Copyright (c) 2009 Claudiu Saftoiu and Arjun Guha
License:        AllRightsReserved
License-file:   LICENSE
Author:         Claudiu Saftoiu, Arjun Guha
Maintainer:     Claudiu Saftoiu <csaftoiu@cs.brown.edu>
Homepage:       http://www.cs.brown.edu/research/plt/
Stability:      provisional
Category:       Language
Build-Type:     Custom
Synopsis:       Typed JavaScript compiler
Data-Dir:       data
Data-Files:
  typedjs_contracts.js
Description:

 
Executable tjs
  Main-Is: Tjs.hs
  Hs-Source-Dirs:
    src
  Build-Depends:
    base>=4, mtl>=1.1.0.1, parsec<3.0.0, pretty>=0.1, containers>=0.1, syb>=0.1,
    filepath>=1.1.0.1, JsContracts>=0.2, WebBits>=0.11.0
  ghc-options:
    -fwarn-incomplete-patterns
  Extensions:     
    Generics Rank2Types MultiParamTypeClasses FunctionalDependencies
    TypeSynonymInstances FlexibleInstances FlexibleContexts
    DeriveDataTypeable NoMonomorphismRestriction RelaxedPolyRec
